<resources>
    <string name="app_name">Grind.FM</string>

    <string name="menu_radio">Радио</string>
    <string name="menu_news">Новости</string>
    <string name="menu_video">Видео</string>
    <string name="menu_vk">VK</string>
    <string name="menu_request">Заказать</string>

    <string name="loading">Загрузка…</string>
    <string name="load_fail">Не удалось загрузить</string>

    <string name="radio_loading">Grind.FM — это игровое радио для настоящих геймеров!</string>

    <string name="request_info">На этой страничке вы можете заказать композицию, однако если любимого трека вдруг не
        найдется, не расстраивайтесь. Дело в том, что мелодии проигрываются из нашей базы, которая пока не
        бесконечна.\n\nНе получится заказать треки, которые недавно проигрывались.\n\nПосле того, как вы сделали заказ,
        ваша
        композиция встанет в очередь, и, возможно, придется немного подождать, прежде чем она выйдет в эфир.
    </string>
    <string name="request_hint">Введите исполнителя или композицию…</string>
    <string name="request_button">Поиск</string>

    <string name="request_ok">Композиция добавлена в очередь</string>
    <string name="request_false">Не удалось заказать композицию</string>
    <string name="request_error">Ошибка сервиса</string>
    <string name="content_description_image">Картинка</string>
    <string name="error_try_again">Еще раз!</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="main_menu_refresh">Обновить</string>
    <string name="news_feed">Поток новостей</string>
    <string name="news_feed_source">Укажите источники новостей</string>
    <string name="grind_welcome">Мы освещаем самые яркие события игрового мира! Кроме отличной музыки мы гарантируем
        самую свежую информацию и самые горячие новости гейм-индустрии. Только у нас можно услышать культовых личностей
        виртуальной вселенной. И, конечно же, получить море энергии и положительных эмоций!
    </string>
    <string name="grind_request">Заказать песню</string>
</resources>