<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:grind="http://schemas.android.com/apk/res/com.dsvoronin.grindfm"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background_gradient">

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="70dp"
                  android:id="@+id/footer"
                  android:background="@drawable/listmenu_gradient"
                  android:layout_alignParentBottom="true"
                  android:orientation="horizontal">

        <com.dsvoronin.grindfm.view.MenuButton android:layout_width="0dp"
                                               android:layout_weight="1"
                                               android:layout_height="fill_parent"
                                               android:onClick="toRadio"
                                               grind:image="@drawable/ic_menu_signal"
                                               grind:label="@string/menu_radio"/>

        <com.dsvoronin.grindfm.view.MenuButton android:layout_width="0dp"
                                               android:layout_weight="1"
                                               android:layout_height="fill_parent"
                                               android:onClick="toNews"
                                               grind:image="@drawable/ic_menu_feed"
                                               grind:label="@string/menu_news"/>

        <com.dsvoronin.grindfm.view.MenuButton android:layout_width="0dp"
                                               android:layout_weight="1"
                                               android:layout_height="fill_parent"
                                               android:onClick="toVideo"
                                               grind:image="@drawable/ic_menu_movie"
                                               grind:label="@string/menu_video"/>

        <com.dsvoronin.grindfm.view.MenuButton android:layout_width="0dp"
                                               android:layout_weight="1"
                                               android:layout_height="fill_parent"
                                               android:onClick="toVkontakte"
                                               grind:image="@drawable/ic_menu_love"
                                               grind:label="@string/menu_vk"/>

        <com.dsvoronin.grindfm.view.MenuButton android:layout_width="0dp"
                                               android:layout_weight="1"
                                               android:layout_height="fill_parent"
                                               grind:image="@drawable/ic_menu_signal"
                                               grind:label="@string/menu_radio"/>

    </LinearLayout>

    <com.dsvoronin.grindfm.view.GesturableViewFlipper android:layout_width="fill_parent"
                                                      android:layout_height="fill_parent"
                                                      android:id="@+id/flipper"
                                                      android:layout_above="@id/footer">

        <include android:id="@+id/radio" layout="@layout/radio"/>
        <include android:id="@+id/news" layout="@layout/news"/>
        <include android:id="@+id/video" layout="@layout/video"/>
        <include android:id="@+id/vkontakte" layout="@layout/vkontakte"/>

    </com.dsvoronin.grindfm.view.GesturableViewFlipper>

    <ImageView android:layout_width="fill_parent"
               android:layout_height="6dp"
               android:layout_above="@id/footer"
               android:src="@drawable/shadow"/>

</RelativeLayout>