<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/background">

    <com.dsvoronin.grindfm.view.Header android:layout_width="fill_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_alignParentTop="true"
                                       android:id="@+id/header"/>

    <com.dsvoronin.grindfm.view.Footer android:layout_width="fill_parent"
                                       android:layout_height="wrap_content"
                                       android:layout_alignParentBottom="true"
                                       android:id="@+id/footer"/>

    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_above="@id/footer"
                  android:layout_below="@id/header"
                  android:padding="7dp"
                  android:orientation="vertical">
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:textColor="@android:color/white"
                  android:textSize="17dp"
                  android:gravity="center"
                  android:text="@string/radio_loading"
                  android:id="@+id/grind_title"/>
        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textSize="13dp"
                  android:layout_marginTop="5dp"
                  android:text="@string/grind_welcome"
                  android:id="@+id/grind_welcome"/>

        <TextView android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textSize="13dp"
                  android:layout_marginTop="5dp"/>

        <!--<TextView android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="16dp"-->
        <!--android:textStyle="bold"-->
        <!--android:text="@string/grind_request"-->
        <!--android:layout_marginTop="15dp"/>-->

        <!--<EditText android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/search_query"-->
        <!--android:textSize="16dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:hint="@string/request_hint"/>-->

        <!--<Button android:layout_width="fill_parent"-->
        <!--android:id="@+id/search_button"-->
        <!--android:padding="10dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:background="@drawable/button_gradient_selector"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/request_button"/>-->

    </LinearLayout>

    <ImageView android:layout_width="fill_parent"
               android:layout_height="6dp"
               android:layout_above="@id/footer"
               android:src="@drawable/shadow_footer"
               android:contentDescription="@string/content_description_image"/>

    <ImageView android:layout_width="fill_parent"
               android:layout_height="6dp"
               android:layout_below="@id/header"
               android:src="@drawable/shadow_header"
               android:contentDescription="@string/content_description_image"/>

</RelativeLayout>